Update for deletes

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
@@ -82,6 +82,7 @@
 
 @section Scripts{
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-extras.js"></script>
 }
 
