--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RoomTypeList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RoomTypeList.cshtml
@@ -52,7 +52,7 @@
 								</a>
 							</div>
 							<div class="cell-inner">
-								<a href="javascript:window.mshMethods.deleteRoom('@rt.Code', '@Model.HotelCode')" >
+								<a href="javascript:window.mshMethods.deleteRoomType('@rt.Code', '@Model.HotelCode')" >
 									<i class="fa-solid fa-times"></i>
 								</a>
 							</div>
@@ -82,6 +82,7 @@
 
 @section Scripts{
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-roomtype.js"></script>
 }
 
