--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelStayEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelStayEditDates.cshtml
@@ -1,20 +1,19 @@
 ﻿@using Msh.Admin.Models.Const
 @{
-	var title = "Extra Dates List";
+	var title = "Hotel Stay Dates List";
 	ViewData["Title"] = title;
-	var itemCode = ViewBag.Code as string;
 	var hotelCode = ViewBag.HotelCode as string;
 }
 
-@await Component.InvokeAsync("AdminMenu", new { menuName = AdminConst.MenuHotels, currentItem = "ExtrasList" })
+@await Component.InvokeAsync("AdminMenu", new { menuName = AdminConst.MenuHotels, currentItem = "HotelList" })
 
-<input type="hidden" id="edit-type" value="item-dates"/>
-<input type="hidden" id="item-code" value="@itemCode" />
+<input type="hidden" id="edit-type" value="item-dates" />
+<input type="hidden" id="item-code" value="" />
 <input type="hidden" id="hotel-code" value="@hotelCode" />
 
 <div class="text-center">
-	<h1 class="display-6">@title for @itemCode @hotelCode</h1>
-	<p>For more information click <info-icon name="info-extra-dates" /></p>
+	<h1 class="display-6">@title for @hotelCode</h1>
+	<p>For more information click <info-icon name="info-hotel-dates" /></p>
 </div>
 
 <div class="row">
@@ -26,10 +25,17 @@
 <div class="mt-3" style="display:flex;justify-content:start;">
 	<div class="input-group">
 		<button id="save-dates" class="btn btn-outline-primary" class="mr-3">Save</button>
-		<a asp-contoller="Hotels" asp-action="ExtrasList" asp-route-hotelCode="@hotelCode" asp-route-code="@itemCode" class="btn btn-outline-secondary">Return to list</a>
+		<a asp-contoller="Hotels" asp-action="HotelList" class="btn btn-outline-secondary">Return to list</a>
 	</div>
 		
 </div>
+
+@* <div class="row my-3">
+	<div class="col-12">
+		<button id="save-dates" class="btn btn-primary" class="mr-3">Save</button>
+		<a asp-contoller="Hotels" asp-action="HotelList" class="btn btn-secondary">Return to list</a>
+	</div>
+</div> *@
 
 <div id="page-info" style="display:none;">
 	<div data-info-for="info-hotel-dates">
@@ -55,6 +61,7 @@
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
 	<script src="~/js/mshapp/msh-itemdatesservice.js"></script>
-	<script src="~/js/admin/hotels/msh-admin-extras.js"></script>
+	<script src="~/js/admin/hotels/msh-admin-hotels-staydates.js"></script>
+	<script src="~/js/admin/hotels/msh-admin-hotels.js"></script>
 }
 
