--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
@@ -55,7 +55,7 @@
 							</div>
 						</div>
 					</td>
-					<td style="width:80px;">
+					<td style="width:90px;">
 						
 						<div class="cell-outer">
 							<div class="cell-inner">
@@ -64,8 +64,13 @@
 								</a>
 							</div>
 							<div class="cell-inner">
-								<a href="javascript:window.mshMethods.deleteExtra('@rt.Code', '@Model.HotelCode')" >
+								<a href="javascript:window.mshMethods.deleteItem('@rt.Code', '@Model.HotelCode')" >
 									<i class="fa-solid fa-times"></i>
+								</a>
+							</div>
+							<div class="cell-inner">
+								<a href="javascript:window.mshMethods.copyItem('@rt.Code', '@Model.HotelCode')">
+									<i class="fa-solid fa-copy"></i>
 								</a>
 							</div>
 						</div>
@@ -93,8 +98,8 @@
 </div>
 
 @section Scripts{
-	<script src="~/js/mshapp/mshapp.js"></script>
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
+	<script src="~/js/mshapp/mshapp.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-extras.js"></script>
 }
 
