--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
@@ -1,4 +1,4 @@
-@using Msh.Admin.Models.Const
+﻿@using Msh.Admin.Models.Const
 @model Msh.WebApp.Models.Admin.ViewModels.ExtrasListVm;
 @{
 	var title = "Extras List";
@@ -27,7 +27,19 @@
 	<div class="col-12">
 		<table>
 			<tr>
-				<th>Extra Code</th>
+				<th>
+					<div class="cell-outer">
+						<div class="cell-inner">
+							<p>Code</p>
+						</div>
+						<div class="cell-inner">
+							<a href="javascript:window.mshMethods.sortList('@Model.HotelCode')">
+								<i class="fa-solid fa-sort"></i>
+							</a>
+						</div>
+					</div>
+				</th>
+				<th class="text-end">Price</th>
 				<th>Description</th>
 				<th>Dates</th>
 				<th>   
