WebApp - Update info for extras

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtraEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtraEditDates.cshtml
@@ -13,7 +13,7 @@
 <input type="hidden" id="hotel-code" value="@hotelCode" />
 
 <div class="text-center">
-	<h1 class="display-6">@title for @itemCode @hotelCode</h1>
+	<h1 class="display-6">@title for @itemCode in @hotelCode</h1>
 	<p>For more information click <info-icon name="info-extra-dates" /></p>
 </div>
 
@@ -32,21 +32,10 @@
 </div>
 
 <div id="page-info" style="display:none;">
-	<div data-info-for="info-hotel-dates">
-		<span>Hotel Dates</span>
+	<div data-info-for="info-extra-dates">
+		<span>Extra Dates</span>
 		<div>
-			<p>
-				Add dates when the hotel is unavailable (Stay From - Stay To). 
-				Set the Enabled flag to enable the dates to be used, i.e., to disable the hotel for those dates.
-			</p>
-			<p>
-				Add dates when the user cannot make bookings for the hotel (Book From - Book To). 
-				Set the Enabled flag to enable the dates to be used, i.e., 
-				to prevent users making bookings for the hotel on those dates.
-			</p>
-			<p>
-				The date ranges are inclusive.
-			</p>
+			
 		</div>
 	</div>
 </div>
