WebApp - Update list views for bulk operations

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtrasList.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Models.Admin.ViewModels
 @model Msh.WebApp.Models.Admin.ViewModels.ExtrasListVm;
 @{
 	var title = "Extras List";
@@ -11,11 +12,8 @@
 	menuName = AdminConst.MenuHotels, currentItem = "ExtrasList"
 })
 
-<input type="hidden" id="hotel-code-id" value="@Model.HotelCode"/>
-@foreach (var h in @Model.Hotels)
-{
-	<input type="hidden" name="hotel-codes" id="hotel-@h.HotelCode" value="@h.Name" data-msh-option="@h.HotelCode" />
-}
+@await Html.PartialAsync("Hotels/_HiddenHotelInputs", @Model as HotelListVm)
+
 <div class="text-center">
 	<h1 class="display-6">@title</h1>
 	<p>Hotel Extras. Click for more information: <info-icon name="info-extras" /> </p>
@@ -82,7 +80,6 @@
 						</div>
 					</td>
 					<td style="width:90px;">
-						
 						<div class="cell-outer">
 							<div class="cell-inner">
 								<a asp-controller="Hotels" asp-action="ExtraEdit" asp-route-code="@rt.Code" asp-route-hotelCode="@Model.HotelCode">
@@ -106,7 +103,6 @@
 						<div class="cell-outer">
 							<div class="cell-inner">
 								<input type="checkbox" name="bulk-check" id="blk-@rt.Code" data-msh-code="@rt.Code"/>
-
 							</div>
 						</div>
 					</td>
@@ -117,14 +113,8 @@
 
 	</div>
 </div>
-<div class="row d-none" id="bulk-buttons">
-	<div class="col-12 d-flex flex-row-reverse">
-		<div class="form-group">
-			<button id="bulk-copy" class="btn btn-outline-primary mt-2" onclick="window.mshMethods.copyBulk('@Model.HotelCode')">Bulk Copy</button>
-			<button id="bulk-delete" class="btn btn-outline-primary mt-2" onclick="window.mshMethods.deleteBulk('@Model.HotelCode')">Bulk Delete</button>
-		</div>
-	</div>
-</div>
+
+@await Html.PartialAsync("Hotels/_BulkCopyDelButtons", @Model.HotelCode)
 
 @await Html.PartialAsync("Admin/_AdminErrorBlock", @Model.ErrorMessage)
 
