--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanList.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Models.Admin.ViewModels
 @model Msh.WebApp.Models.Admin.ViewModels.RatePlanListVm;
 @{
 	var title = "Rate Plan List";
@@ -11,8 +12,11 @@
 	menuName = AdminConst.MenuHotels, currentItem = "RatePlanList"
 })
 
+@await Html.PartialAsync("Hotels/_HiddenHotelInputs", @Model as HotelListVm)
+
 <div class="text-center">
 	<h1 class="display-6">@title</h1>
+	<p>Hotel Rate Plans. Click for more information: <info-icon name="info-rate-plans" /></p>
 </div>
 
 @await Component.InvokeAsync("AdminHotelSelect", @Model.HotelCode)
@@ -21,7 +25,18 @@
 	<div class="col-12">
 		<table>
 			<tr>
-				<th>Rate Plan Code</th>
+				<th>
+					<div class="cell-outer">
+						<div class="cell-inner">
+							<p>Code</p>
+						</div>
+						<div class="cell-inner">
+							<a href="javascript:window.mshMethods.sortList('@Model.HotelCode')">
+								<i class="fa-solid fa-sort"></i>
+							</a>
+						</div>
+					</div>
+				</th>
 				<th>Group Code</th>
 				<th>Description</th>
 				<th>   
@@ -33,6 +48,13 @@
 						</div>
 						<div class="cell-inner">
 							<info-icon name="info-list-icons" />
+						</div>
+					</div>
+				</th>
+				<th>
+					<div class="cell-outer">
+						<div class="cell-inner">
+							<input type="checkbox" name="bulk-check" id="blk" data-msh-code="0" />
 						</div>
 					</div>
 				</th>
@@ -64,13 +86,20 @@
 							</div>
 						</div>
 					</td>
+					<td style="width:30px;">
+						<div class="cell-outer">
+							<div class="cell-inner">
+								<input type="checkbox" name="bulk-check" id="blk-@rt.RatePlanCode" data-msh-code="@rt.RatePlanCode" />
+							</div>
+						</div>
+					</td>
 				</tr>
 			}
-			
 		</table>
-
 	</div>
 </div>
+
+@await Html.PartialAsync("Hotels/_BulkCopyDelButtons", @Model.HotelCode)
 
 @await Html.PartialAsync("Admin/_AdminErrorBlock", @Model.ErrorMessage)
 
@@ -78,10 +107,10 @@
 	
 	@await Html.PartialAsync("Hotels/_ListIconsInfo", ViewBag.InfoIcons as string)
 
-	<div data-info-for="info-hotel-code">
-		<span>@ViewBag.InfoIcons </span>
+	<div data-info-for="info-rate-plans">
+		<span>Rate Plans</span>
 		<div>
-			<p>Select a hotel to view @ViewBag.InfoIcons for that hotel</p>
+			<p></p>
 		</div>
 	</div>
 </div>
