WebApp - add sticky-bottom for buttons (fix background)

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RatePlanEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RatePlanEdit.cshtml
@@ -266,7 +266,7 @@
 
 			
 
-			<div class="input-group">
+			<div class="input-group sticky-bottom">
 				<button type="submit" name="Command" value="Save" class="btn btn-outline-primary">Save</button>
 				<a asp-controller="Hotels" asp-action="RatePlanList" asp-route-hotelCode="@hotelCode" class="btn btn-outline-secondary">Return to list</a>
 			</div>
