--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypeEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypeEdit.cshtml
@@ -149,7 +149,7 @@
 				<span asp-validation-for="NoDogsText" class="text-danger"></span>
 			</div>
 
-			<div class="input-group">
+			<div class="input-group sticky-bottom">
 				<button type="submit" name="Command" value="Save" class="btn btn-outline-primary">Save</button>
 				<a asp-controller="Hotels" asp-action="RoomTypeList" asp-route-hotelCode="@hotelCode" class="btn btn-outline-secondary">Return to list</a>
 			</div>
