WebApp - Add CSS and javascript for specials

--- a/solution/Msh/Msh.WebApp/wwwroot/css/site.css
+++ b/solution/Msh/Msh.WebApp/wwwroot/css/site.css
@@ -186,3 +186,10 @@ table {
 .btn-outline-secondary {
     background-color: white;
 }
+
+.icon-red {
+    color:red;
+}
+.icon-green{
+    color:green;
+}
